We need support to parse and create ECDH algorithms in Libksba.
Description
Description
Revisions and Commits
Revisions and Commits
rK libksba | |||
rKcda81bec2e14 Support creation of ECDSA signed data. | |||
rK8ade151b1048 Support creation of ECDH enveloped data object (part 2 of 2) | |||
rK0ddfbb464e0a Support creation of ECDH enveloped data object (part 1) | |||
rK401dc58d3d55 Support parsing of the CMS KeyAgreeRecipientInfo. |
Status | Assigned | Task | ||
---|---|---|---|---|
Resolved | • werner | T4098 GpgSM: Add ECC support | ||
Resolved | • werner | T4920 Support ECDH in Libksba |