src/cms-parser.c
@@ -851,10 +851,16 @@ _ksba_cms_parse_enveloped_data_part_1 (ksba_cms_t cms)
       return gpg_error (GPG_ERR_UNSUPPORTED_CMS_OBJ);
     }
 
-  /* Next one is the SET OF recipientInfos */
+  /* Next one is the SET OF RecipientInfo:
+   * RecipientInfo ::= CHOICE {
+   *     ktri KeyTransRecipientInfo,
+   *     kari [1] KeyAgreeRecipientInfo,
+   *     kekri [2] KEKRecipientInfo
+   * }  */
   if ( !(ti.class == CLASS_UNIVERSAL
          && ti.tag == TYPE_SET && ti.is_constructed))
     return gpg_error (GPG_ERR_INV_CMS_OBJ);
+
 
   vtend = &cms->recp_info;
   if (ti.ndef)
@@ -881,7 +887,7 @@ _ksba_cms_parse_enveloped_data_part_1 (ksba_cms_t cms)
 
           err = create_and_run_decoder
             (cms->reader,
-             "CryptographicMessageSyntax.KeyTransRecipientInfo",
+             "CryptographicMessageSyntax.RecipientInfo",
              BER_DECODER_FLAG_FAST_STOP,
              &vt->root, &vt->image, &vt->imagelen);
           if (err)
@@ -907,8 +913,8 @@ _ksba_cms_parse_enveloped_data_part_1 (ksba_cms_t cms)
 
           err = create_and_run_decoder
             (cms->reader,
-             "CryptographicMessageSyntax.KeyTransRecipientInfo",
-             0,
+             "CryptographicMessageSyntax.RecipientInfo",
+             BER_DECODER_FLAG_FAST_STOP,
              &vt->root, &vt->image, &vt->imagelen);
           if (err)
             {
